# opshala

./: .gitignore  .prettierignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.js
src/: App.tsx  index.tsx
src-tauri/: Cargo.toml  Settings.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/01-init/: up.sql
src-tauri/src/: error.rs  github.rs  main.rs
src-tauri/src/apps/: crud.rs  mod.rs
src-tauri/src/config/: mod.rs
src-tauri/src/database/: mod.rs  setup.rs
src-tauri/src/domains/: mod.rs
src-tauri/src/projects/: crud.rs  helpers.rs  mod.rs
src/components/: AppInit.tsx  Explore.tsx  Home.tsx  Projects.tsx  Screens.tsx  Setup.tsx
src/components/apps/: AppsIndex.tsx  Home.tsx  List.tsx
src/components/apps/manage/: General.tsx
src/components/projects/: CreateProject.tsx  List.tsx  ManageProject.tsx
src/components/projects/manage/: General.tsx
src/components/settings/: Index.tsx  SettingsIndex.tsx  Setup.tsx
src/stores/: global.tsx  project.tsx  projects.tsx  user.tsx
src/temp/: softwareItems.ts
src/utils/: types.ts
src/widgets/: NavigationBar.tsx  NavigationButton.tsx  YouTube.tsx
src/widgets/apps/: Item.tsx
src/widgets/explore/: Item.tsx
src/widgets/interactable/: Button.tsx  FolderInput.tsx  TextInput.tsx
src/widgets/myApps/: Item.tsx
src/widgets/navigation/: NavigationBar.tsx  NavigationButton.tsx  SidebarHeading.tsx  SidebarItem.tsx
src/widgets/projects/: Item.tsx
src/widgets/typography/: Heading.tsx  Paragraph.tsx
