[package]
name = "desktopapp"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [ "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.13.4"
serde_derive = "1.0.193"
git2 = "0.18.1"
rusqlite = "0.30.0"
rusqlite_migration = { version = "1.1.0", features = ["from-directory"] }
lazy_static = "1.4.0"
include_dir = "0.7.3"
ssh-key = { version = "0.6.3", features = ["ecdsa", "rand_core", "ed25519"] }
reqwest = { version = "0.11.23", features = ["json"] }
url = "2.5.0"
ron = "0.8.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
